Refactoring for Codeclimate.